[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muffin"
version = "1.0"
description = "MuffinMultimodal foundation models are found to be “out-of-the-box” multimodal interfaces for LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.0.1", "torchvision==0.15.2",
    "tokenizers>=0.12.1,<0.14", "sentencepiece==0.1.99", "shortuuid",
    "accelerate==0.21.0", "peft==0.4.0", "bitsandbytes==0.41.0",
    "pydantic<2,>=1", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==3.35.2", "gradio_client==0.2.9",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4",
    "openai==0.28.1", "timm==0.4.12", "torchscale==0.2.0", "opencv-python==4.5.5.62",
    "protobuf==4.24.3",

]

[project.optional-dependencies]
train = ["ninja", "wandb"]

[project.urls]
"Homepage" = "https://rlhf-v.github.io"
"Bug Tracker" = "https://github.com/yiranyyu/RLHF-V/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]